fix(tree): prevent tree-item content from being clipped

--- a/src/components/tree-item/tree-item.scss
+++ b/src/components/tree-item/tree-item.scss
@@ -22,7 +22,6 @@
   @apply text-n2h;
 
   .node-actions-container {
-    @apply h-6;
     .node-container {
       --calcite-tree-padding-y: theme("padding.1");
       .checkbox,
@@ -36,7 +35,7 @@
       }
     }
     .actions-end {
-      @apply inline-flex;
+      @apply h-6 inline-flex;
     }
   }
 }
@@ -45,7 +44,6 @@
   @apply text-n1h;
 
   .node-actions-container {
-    @apply h-8;
     .node-container {
       --calcite-tree-padding-y: theme("padding.2");
       .checkbox,
@@ -59,7 +57,7 @@
       }
     }
     .actions-end {
-      @apply inline-flex;
+      @apply h-8 inline-flex;
     }
   }
 }
@@ -68,7 +66,6 @@
   @apply text-0h;
 
   .node-actions-container {
-    @apply h-12;
     .node-container {
       --calcite-tree-padding-y: theme("padding.3");
       .checkbox,
@@ -82,7 +79,7 @@
       }
     }
     .actions-end {
-      @apply inline-flex;
+      @apply h-12 inline-flex;
     }
   }
 }
